<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Asteroides</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Asteroides</string>
    <string name="play">Jugar</string>
    <string name="configure">Configurar</string>
    <string name="about">Acerca de</string>
    <string name="exit">Puntuaciones</string>

</resources>